--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,18 @@ build-backend = "hatchling.build"
 
 [project]
 name = "uf"
-version = "0.0.1"
+version = "0.1.1"
 description = "UI Fast"
 readme = "README.md"
 requires-python = ">=3.10"
 keywords = []
 authors = []
 dependencies = [
-    "qh",  # HTTP service generation
-    "ju",  # RJSF form generation and JSON utilities
-    "i2",  # Signature introspection and manipulation
-    "dol",  # Mapping interfaces and storage abstractions
-    "meshed",  # Function composition and DAG utilities
+    "qh",
+    "ju",
+    "i2",
+    "dol",
+    "meshed",
 ]
 
 [project.license]
